[package]
name = "file_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
actix-multipart = "0.4"
futures = { version = "0.3", features = ["executor"] }
tokio = { version = "1", features = ["full"] }
bytes = "1.4.0"
actix-rt = "2.8.0"
actix-http = "3.3.1"
mime = "0.3.17"
actix-testing = "1.0.1"
