[package]
name = "react_native_metro_cache_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
async-trait = "0.1.50"
flate2 = "1.0.22"
tokio = { version = "1", features = ["full"] }
futures = "0.3.16"
